Attempt to fix Scripting workflow not triggering

--- a/.github/workflows/scripting.yml
+++ b/.github/workflows/scripting.yml
@@ -20,8 +20,8 @@ on:
   push:
     branches: [ "master" ]
     paths:
-      - src/*
-      - tools/scripting_docs_gen/*
+      - src/**
+      - tools/scripting_docs_gen/**
   workflow_dispatch:
 
 jobs:
