--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build_type: ["RelWithDebInfo", "Debug"]
+        build_type: ["Release", "Debug"]
 
     runs-on: ubuntu-latest
     steps:
