Prevent debug build from uploading.
If you'd like to get a stacktrace, there's a built in stacktrace viewer you can use, or you can compile the source code

--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -85,6 +85,7 @@ jobs:
           mv supertux2* upload/
 
       - uses: actions/upload-artifact@v4
+        if: matrix.build_type != 'Debug'
         with:
           name: "wasm32-emscripten-${{ matrix.build_type }}-html"
           path: build/upload/*
