--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -116,6 +116,7 @@ jobs:
         run: ../.ci_scripts/package.sh
 
       - uses: actions/upload-artifact@v4
+        if: matrix.build_type != 'Debug' && matrix.glbinding == 'OFF'
         with:
           name: "${{ matrix.os }}-${{ matrix.build_type }}${{ matrix.glbinding == 'ON' && '-glbinding' || '' }}-dmg"
           path: build/upload/*.dmg
