--- a/.github/workflows/ubuntu-touch.yml
+++ b/.github/workflows/ubuntu-touch.yml
@@ -88,6 +88,7 @@ jobs:
           ~/.local/bin/clickable build --verbose ${BUILD_TYPE} --arch ${ARCH}
 
       - uses: actions/upload-artifact@v4
+        if: matrix.build_type != 'Debug'
         with:
           name: "clickable-${{ matrix.arch }}-${{ matrix.build_type }}-${{ matrix.opengl }}-click"
           path: build.clickable/*.click
