Install gettext into translation_templates workflow
[ci skip]

--- a/.github/workflows/translation_templates.yml
+++ b/.github/workflows/translation_templates.yml
@@ -33,6 +33,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          # Update packages
+          sudo apt-get update
+          sudo apt-get install -y gettext
+
           # Update translation templates:
           chmod +x makepot.sh
           ./makepot.sh
