Start shell script in sh
[ci skip]

--- a/.github/workflows/translation_templates.yml
+++ b/.github/workflows/translation_templates.yml
@@ -39,7 +39,7 @@ jobs:
 
           # Update translation templates:
           chmod +x makepot.sh
-          ./makepot.sh
+          sh ./makepot.sh
 
           # Commit
           git status
