--- a/.github/workflows/translation_templates.yml
+++ b/.github/workflows/translation_templates.yml
@@ -37,6 +37,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y gettext
 
+          # Checkout master to make git describe work
+          git checkout -b "master" -t origin/master
+          
           # Update translation templates:
           chmod +x makepot.sh
           sh ./makepot.sh
