--- a/.github/workflows/translation_templates.yml
+++ b/.github/workflows/translation_templates.yml
@@ -38,7 +38,7 @@ jobs:
           sudo apt-get install -y gettext
 
           # Checkout master to make git describe work
-          git checkout -b "master" -t origin/master
+          git checkout master
           
           # Update translation templates:
           chmod +x makepot.sh
