Fix warning from other cmakefiles
Often these showed up with some libraries that provide their own FindXXXXXX.cmake stuff but were written for versions below 3.5 (which CMake warned about)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,8 @@ project(SUPERTUX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+# Stop CMake from whining about 3.5 or future versions that other FindXXXXX.cmake files (seen from vcpkg) use
+set(CMAKE_WARN_DEPRECATED OFF CACHE BOOL "" FORCE)
 
 if(${PLATFORM} MATCHES "arm64")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D_ARM64_ /DMY_CPU_LE")
