--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 #
 # SuperTux - root build script
-# Copyright (C) 2024 Hyland B. <me@ow.swag.toys>
-#               2006 Christoph Sommer <christoph.sommer@2006.expires.deltadevelopment.de>
+# Copyright (C) 2006 Christoph Sommer <christoph.sommer@2006.expires.deltadevelopment.de>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
