Refactor tests a bit
Probably incomplete commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -276,6 +276,10 @@ configure_file(config.h.cmake ${CMAKE_BINARY_DIR}/config.h )
 ## Build tests
 # TODO Move to CMake Tests
 #include(SuperTux/BuildTests)
+option(BUILD_TESTS "Build tests" OFF)
+if(BUILD_TESTS)
+	add_subdirectory(tests)
+endif()
 
 ## CPack/Installation-specific stuff
 include(SuperTux/BuildCPack)
