--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -1,8 +1,8 @@
 # Will eventually handle game tests here too
-	
 include(CTest)
 
 # TODO make a macro/function for this
-add_executable(MD5Test addon/md5.hpp)
+add_executable(MD5Test md5_test.cpp ${SUPERTUX_SOURCE_DIR}/src/addon/md5.cpp)
+target_include_directories(MD5Test PUBLIC ${SUPERTUX_SOURCE_DIR}/src)
 add_test(NAME MD5Test
 	COMMAND MD5Test)
