--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -54,4 +54,4 @@ jobs:
             --check-level=exhaustive \
             --quiet --inline-suppr --language=c++ --error-exitcode=10 \
             -j"$(nproc)" --std=c++17 --enable=warning,style \
-            --suppress=useStlAlgorithm  src/
+            --suppress=useStlAlgorithm -UEMSCRIPTEN src/
