--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,6 +138,7 @@ include(SuperTux/AddPackage)
 
 # Find dependencies
 add_package(TARGET SDL2 PKG SDL2 PKG_USE SDL2::SDL2 CONFIG REQUIRED PKG_CONFIG sdl2)
+add_package(TARGET PNG PKG PNG PKG_USE PNG::PNG PKG_CONFIG libpng CONFIG REQUIRED) # lol
 add_package(TARGET SDL2_image PKG SDL2_image PKG_USE SDL2_image::SDL2_image CONFIG REQUIRED PKG_CONFIG sdl2_image)
 add_package(TARGET SDL2_ttf PKG SDL2_ttf PKG_USE SDL2_ttf::SDL2_ttf CONFIG REQUIRED PKG_CONFIG sdl2_ttf)
 add_package(TARGET CURL PKG CURL PKG_USE CURL::libcurl PKG_CONFIG libcurl)
@@ -149,7 +150,7 @@ add_package(TARGET glm PKG glm PKG_USE glm::glm CONFIG REQUIRED PKG_CONFIG glm)
 add_package(TARGET fmt PKG fmt PKG_USE fmt::fmt CONFIG REQUIRED PKG_CONFIG fmt)
 add_package(TARGET PhysFS PKG PhysFS PKG_USE PhysFS::PhysFS CONFIG REQUIRED PKG_CONFIG physfs PROVIDES ProvidePhysfs)
 
-include(SuperTux/ProvideSavePNG)
+add_subdirectory(external/SDL_SavePNG)
 include(SuperTux/ProvideSimpleSquirrel)
 include(SuperTux/ProvideDiscord)
 include(SuperTux/ProvideSexpcpp)
